--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-flask==2.3.3
-flask-cors==4.0.0
-pandas==2.1.0
-numpy==1.26.0
-requests==2.31.0
-beautifulsoup4==4.12.2 
+flask
+flask-cors
+pandas
+numpy
+requests
+beautifulsoup4
